--- a/Portfolio/_Imports.razor
+++ b/Portfolio/_Imports.razor
@@ -7,3 +7,6 @@
 @using Microsoft.JSInterop
 @using Portfolio
 @using Portfolio.Shared
+@using Blazor.Extensions.Canvas
+@using Blazor.Extensions.Canvas.Model;
+@using Blazor.Extensions.Canvas.Canvas2D;
