--- a/Portfolio/Shared/NavMenu.razor
+++ b/Portfolio/Shared/NavMenu.razor
@@ -17,6 +17,11 @@
                 <span class="oi oi-account-login" aria-hidden="true"></span> Component
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="NumberRecognition" Match="NavLinkMatch.All">
+                <span class="oi oi-musical-note" aria-hidden="true"></span> Number Recognition
+            </NavLink>
+        </li>
     </ul>
 </div>
 
