--- a/Website/Shared/NavMenu.razor
+++ b/Website/Shared/NavMenu.razor
@@ -1,5 +1,5 @@
 ﻿<div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="">Portfolio</a>
+    <a class="navbar-brand" href="">Website</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -13,13 +13,13 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="Component" Match="NavLinkMatch.All">
-                <span class="oi oi-account-login" aria-hidden="true"></span> Component
+            <NavLink class="nav-link" href="counter">
+                <span class="oi oi-plus" aria-hidden="true"></span> Counter
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="NumberRecognition" Match="NavLinkMatch.All">
-                <span class="oi oi-musical-note" aria-hidden="true"></span> Number Recognition
+            <NavLink class="nav-link" href="fetchdata">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
         </li>
     </ul>
