--- a/Website/_Imports.razor
+++ b/Website/_Imports.razor
@@ -5,8 +5,5 @@
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
-@using Portfolio
-@using Portfolio.Shared
-@using Blazor.Extensions.Canvas
-@using Blazor.Extensions.Canvas.Model;
-@using Blazor.Extensions.Canvas.Canvas2D;
+@using Website
+@using Website.Shared
