Preparing for public deploy

--- a/Website/Pages/Portfolio.razor
+++ b/Website/Pages/Portfolio.razor
@@ -4,7 +4,7 @@
 
 Work in progress
 
-<h1></h1>
+<p>Here i will show my favorites projects from my <a href="https://github.com/kowalskiwiktor98">github</a> profile</p>
 
 @code {
 
