--- a/Website/Pages/About.razor
+++ b/Website/Pages/About.razor
@@ -2,7 +2,7 @@
 
 <h3>About this page</h3>
 
-
+Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>
 
 @code {
 
