--- a/Website/Pages/Index.razor
+++ b/Website/Pages/Index.razor
@@ -1,5 +1,10 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<h1>Hello!</h1>
 
-Welcome to your new app.
+<p>
+    This website is a little showcase of what i've done
+</p>
+<p>
+    It's still in development
+</p>
