--- a/Website/Pages/Portfolio.razor
+++ b/Website/Pages/Portfolio.razor
@@ -6,6 +6,13 @@ Work in progress
 
 <p>Here i will show my favorites projects from my <a href="https://github.com/kowalskiwiktor98">github</a> profile</p>
 
+<ul style="column-count:3">
+    <li style="outline:thick">
+        <h4>Boids 2D in Unity</h4>
+        <img src="~/boidsPreview.gif" alt="Boids 2D" width="75" height="75"/>
+    </li>
+</ul>
+
 @code {
 
 }
